# snakemake-report-plugin-nanopub

./: CHANGELOG.md  README.md  pixi.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: announce-release.yml  ci.yml  codespell.yml  release-please.yml
docs/: further.md  intro.md
src/: snakemake_report_plugin_nanopub_cli.py  snakemake_report_plugin_nanopub_graph.py
src/snakemake_report_plugin_nanopub/: __init__.py  extraction.py  validation.py
src/snakemake_report_plugin_nanopub/scripts/: nanopub_workflow_plotter.py
tests/: test_cli_plot.py  test_cli_render.py  test_extraction.py  test_plugin.py  test_reporter.py  test_validation.py
