[project]
name = "snakemake-report-plugin-nanopub"
version = "0.1.0"
authors = [
    { name = "Christian Meesters", email = "meesters@uni-mainz.de" },
]
description = "Reporter plugin for Snakemake using nanopub-py to create workflow metadata nanopubs"
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "snakemake-interface-common (>=1.17.4,<2.0.0)", 
    "snakemake-interface-report-plugins (>=1.1.0,<2.0.0)",
    #"nanopub-py"
]

[tool.pixi.pypi-dependencies]
snakemake-report-plugin-nanopub = { path = ".", editable = true }

[project.urls]
repository = "https://github.com/snakemake/snakemake-report-plugin-nanopub"
documentation = "https://snakemake.github.io/snakemake-plugin-catalog/plugins/report/nanopub.html"

[build-system]
requires = [ "hatchling"]
build-backend = "hatchling.build"


[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.environments]
dev = { features = ["dev"] }
publish = { features = ["publish"] }

[tool.pixi.feature.dev.dependencies]
pytest = ">=8.3.5,<9"
ruff = ">=0.10.0,<0.11"
pytest-cov = ">=6.0.0,<7"

[tool.pixi.feature.dev.tasks]
format = "ruff format"
lint = "ruff check"
qc = { depends-on = ["format", "lint"] }
coverage-report = "coverage report -m"

[tool.pixi.feature.dev.tasks.test]
cmd = [
  "pytest",
  "--cov=snakemake_reporter_plugin_nanopub",
  "--cov-report=xml:coverage-report/coverage.xml",
  "--cov-report=term-missing",
  "tests/test_plugin.py"
]

[tool.coverage.report]
exclude_lines = [
  "pass",
  "\\.\\.\\.",
]
fail_under = 70.0

# Publish
[tool.pixi.feature.publish.dependencies]
twine = ">=6.1.0,<7"
python-build = ">=1.2.2,<2"

[tool.pixi.feature.publish.tasks]
build = { cmd = "python -m build", description = "Build the package into the dist/ directory" }
check-build = { cmd = "python -m twine check dist/*", depends-on = [
  "build",
], description = "Check that the package can be uploaded" }
[tool.poetry]
[[tool.poetry.packages]]
include = "snakemake_report_plugin_nanopub"
from = "src"


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.3"
coverage = "^7.8.0"
pytest = "^8.3.5"
snakemake = ">9.11.6"
nanopub = "^2.0.1"
rdflib = "^7.1.0"
